[gd_scene load_steps=8 format=2]

[ext_resource path="res://Question.gd" type="Script" id=1]
[ext_resource path="res://Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Roboto/Roboto-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Roboto/Roboto-Italic.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 4 )

[node name="Question" type="Node2D"]
script = ExtResource( 1 )

[node name="Question_Label" type="Label" parent="."]
margin_left = 105.0
margin_top = 35.8596
margin_right = 927.0
margin_bottom = 599.86
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Round_Label" type="Label" parent="."]
margin_left = 382.0
margin_top = 2.0
margin_right = 581.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Timer_Label" type="Label" parent="."]
margin_left = 423.927
margin_top = 551.14
margin_right = 597.927
margin_bottom = 586.14
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
